--- a/secrets/environment.yaml
+++ b/secrets/environment.yaml
@@ -1,4 +1,7 @@
-environment: ENC[AES256_GCM,data:jkeI0XqU4BBkkWnvm5dpcn6H9WWUWMEx6/ORt2JYshg6r5LhO4obLWMD7T/w03sVz50pOF0vgkP3tYwmMdT5AbKosalSoULbH6RufcRvRQsETqZrZhmROZ98yq9EwwEtfYi91ztL7Nci8Y+18StiBB5KljM=,iv:DhDJxFl7DRyRflw3X6jGSXfZ1NDy7u+G2wtykGoWit8=,tag:87h44BEJ8fgmU4JAOViiPw==,type:str]
+environment:
+    apitoken: ENC[AES256_GCM,data:U1yXSu9zIXuz6wwM8KvHJcs9dvB8xUMyrahJtTNlrVI=,iv:DJh/Ok5c4SHU24txejApYhv4Xdr6f2q4SJbmSq+vhgU=,tag:mqPzk9vHOmqyuvUYeGab3A==,type:str]
+    zoneid: ENC[AES256_GCM,data:lPNZ5/c1PJGLlq092P1lF9vAXeDVAA==,iv:08VNGsuDzFRahcgSU9KUI9iZ3QOn3TW39fMTEFkbOQQ=,tag:01Db/+6kr1vDlP+03KwnIA==,type:str]
+    recordid: ENC[AES256_GCM,data:oThkiq2K24pFlOSQ0I4A7C42mEtlUsh3ld2OIo8WnJA=,iv:x1OBP62bST0dhQe9VuYcuPOvBFEiuIW3W2m2TvkUmSk=,tag:riyAR+ia3CY8WrvC0BBaWQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,23 +11,23 @@ sops:
         - recipient: age1d085lpynkxxf0mfus0rd3qq0r38clwz9d5ddrl79x982z00j6qsqq8f54g
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxRXQ3NHZ4dDhpMWtSMEsx
-            c2FsTmwwRmVpK0Vyd1dSZ1dPbG8zWVU3YkF3CnZCa2ZjYjlnQU5VdnRIQUFqS2pj
-            SE1CV1RRWG9tVDFHY1dua2hpdWsya1EKLS0tIEJlb0JQYTVaS0QvTDlVMHdncytm
-            Ynhrc1NZRnY4OU1GWmNIektNRUtHR3MKlGLdfRFlfqjK9YxG1K0qS8ThAtCurGkN
-            pEYSkauG/F1+UNCkFZgOYgRap6LHMS0IZAuTm8XBll8RPUIM9+TjVA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFTS9wbXNmUUFEOHRuNENs
+            SU0yQ3l5azd5U2szOTJ5Z2lsNHlleGtBemw0CmtoL0FNMU5QVURWeUZPQk85Z20w
+            bHFSWldMN0NSMFFzY2M4ZUxCUlBESGcKLS0tIC9HY05OdnF0SzFmSXFKUHlzK3pn
+            eUVXNWlqNHB2YzA2UnhyQ3pNbmU4Q2sKcfD4LLovSjCr0LTh6rfVHCuAvP9dczHP
+            Bxa1HGxN+sECs9/YPSHeOkEmlgoiPYBlXH93svTCvftTYhMMJIayfQ==
             -----END AGE ENCRYPTED FILE-----
-        - recipient: age1ps0v726nguddv4rxvf3ja4hz0jdtgdlru4dckhazqhm2k5hmspzs9sudjk
+        - recipient: age1en39r6ynnsslwdjkrevs48z886ach4rnjea3u3uu734l8r2waa7s5qjm2d
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTelVyUnEwQWkrQjhXdmlZ
-            L2xaYkRleEdYeEhhb0R0Q0RNNjlGYVdlU0c4CnBjRFJCb3pUVXhFNFFtVjVON3d1
-            M1p2TllSaWI0UWxwa2pnT2pjMy95U1UKLS0tIE1BWDB2VXZ4K0tDa3RmSUg3RFFF
-            UFBIazR0ZythR2JTOEg5eVRXdEk1bmMKLc1zLX5chKA8t+6yOAex36I/eW7Mz8bx
-            TnuHvHWybGtQbYU4MqWPY/BkWRCIzvDE8HILbbCGWt0hRu7mXIkvzg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYZFd3ZkVicE5WM3BSclBN
+            czZxdDZid2UvS3BJTDdWU0M0TjYvcDErS2o0CkwrZVB4SXNGV0pNMWVaK2owZFdJ
+            dnJONFgxUEpIODY0Mkdac01lQlhmc2cKLS0tIEFjS3NSYzJtNDA3anBWbXZPbG93
+            eUQ1V2hWZWI2bEdqa3Z3RVJYSk9oK0EKJdfzjo646MsqZbrW7M/RVLXp0aKv8BRc
+            lWWYoCLAz3zVa+BP/wG25jBRthS4SNi+U6BZi9ezrOAxFz/L89zKPA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-14T09:04:23Z"
-    mac: ENC[AES256_GCM,data:ihfV18t6BA4+Bpz14XHBfY0jmmmRDEsxbsvumqQqQZ9GtnPRNe5qPim8mvctUm4fXfqsVPVc6Z4oPhqnEv/jpyuotDwJEcpTMgzXowue3l0j6+QG/IP9t/i+150Ej2SzggeWLIjRXkP6B4MeN0LYwNjXMbRCiaIZ5Us4G9zJG9o=,iv:Q5NCXs6JuXP/jeJZJK+PO903aHAqulkUEcHbLI5SmtQ=,tag:7lWp1HrRoZ4L4T3TENWPVg==,type:str]
+    lastmodified: "2023-11-14T09:11:49Z"
+    mac: ENC[AES256_GCM,data:2NJB2p6UaRZ3aBEdmROVPtY1ps1GNkEAjdogLHKoWLo83XJ5nzHAMuvUoSRk88CKUbr3XGwYEGhzG5XBTeDKxpdUXnj4Xc39H5Gy4n+3725yN2Z6+KAbcxiLaNDmhk3Mi4Jty2iU/YPkkjWlTwhnX7UbvztRbjHEIQ9YOqHxh6Q=,iv:KYz5w7TCBScJgScXbBFGmn1P09ZCX1OI9J7DBYGKMqM=,tag:Zo0HguR7Bap3z6ZSAmWbyw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
